--- a/templates/01-edit-product.html
+++ b/templates/01-edit-product.html
@@ -14,8 +14,9 @@
             </div>
             <div class="row tm-edit-product-row">
               <div class="col-xl-6 col-lg-6 col-md-12">
-                <form action="/dashboard/update-product/{{product.id}}" method="post" class="tm-edit-product-form">
+                <form action="" method="post" enctype="multipart/form-data" class="tm-edit-product-form">
                   {% csrf_token %}
+                  {{form.media}}
                   <div class="form-group mb-3">
                     <label
                       for="name"
@@ -25,22 +26,11 @@
                       id="name"
                       name="name"
                       type="text"
-                      value="{{product.name}}"
+                      value="{{form.product.name}}"
                       class="form-control validate"
                     />
                   </div>
-                  <div class="form-group mb-3">
-                    <label
-                      for="description"
-                      >Description</label
-                    >
-                    <textarea                     
-                      class="form-control validate tm-small"
-                      rows="5"
-                      name="product_details"
-                      required
-                    >{{product.product_details}}</textarea>
-                  </div>
+                  
                   <div class="form-group mb-3">
                     <label
                       for="category"
@@ -50,9 +40,31 @@
                       class="custom-select tm-select-accounts"
                       id="category" name="category"
                     >
-                      <option>Select category</option>
                       {% for category in categories %}
+                      {% if category.id == form.product.category.id %}
                       <option name="category" value="{{category.id}}" selected>{{category.name}}</option>
+                      {% else %}
+                      <option name="category" value="{{category.id}}">{{category.name}}</option>
+                      {% endif %}
+                      {% endfor %}
+                    </select>
+                  </div>
+
+                  <div class="form-group mb-3">
+                    <label
+                      for="subcategory"
+                      >Sub-Category</label
+                    >
+                    <select
+                      class="custom-select tm-select-accounts"
+                      id="subcategory" name="subcategory"
+                    >
+                      {% for subcategory in subcategories %}
+                      {% if subcategory.id == form.product.subcategory.id %}
+                      <option name="subcategory" value="{{subcategory.id}}" selected>{{subcategory.name}}</option>
+                      {% else %}
+                      <option name="subcategory" value="{{subcategory.id}}">{{subcategory.name}}</option>
+                      {% endif %}
                       {% endfor %}
                     </select>
                   </div>
@@ -66,7 +78,7 @@
                             id="price"
                             name="price"
                             type="text"
-                            value="{{product.price}}"
+                            value="{{form.product.price}}"
                             class="form-control validate"
                             data-large-mode="true"
                           />
@@ -80,31 +92,59 @@
                             id="mrp"
                             name="mrp"
                             type="text"
-                            value="{{product.mrp}}"
+                            value="{{form.product.mrp}}"
                             class="form-control validate"
                           />
                         </div>
                   </div>
+
+                  <div class="form-group mb-3">
+                    <label
+                      for="description"
+                      >Description</label
+                    >
+                    {{form.product_details}}
+                  </div>
+
+                  <div class="form-group mb-3">
+                    <label
+                      >Main Image</label
+                    >
+                    <img src="{{form.product.main_img.url}}" alt="Product image" class="img-fluid d-block mx-auto">
+                    {{form.main_img}}
+                  </div>
+                  <div class="form-group mb-3">
+                    <label
+                      >Image 1</label
+                    >
+                    <img src="{{form.product.img1.url}}" alt="Product image" class="img-fluid d-block mx-auto">
+                    {{form.img1}}
+                  </div>
+                  <div class="form-group mb-3">
+                    <label
+                      >Image 2</label
+                    >
+                    <img src="{{form.product.img2.url}}" alt="Product image" class="img-fluid d-block mx-auto">
+                    {{form.img2}}
+                  </div>
+                  <div class="form-group mb-3">
+                    <label
+                      >Image 3</label
+                    >
+                    <img src="{{form.product.img3.url}}" alt="Product image" class="img-fluid d-block mx-auto">
+                    {{form.img3}}
+                  </div>
                   
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-                <div class="tm-product-img-edit mx-auto">
-                  <img src="{{product.main_img.url}}" alt="Product image" class="img-fluid d-block mx-auto">
-                  <i
-                    class="fas fa-cloud-upload-alt tm-upload-icon"
-                    onclick="document.getElementById('fileInput').click();"
-                  ></i>
-                </div>
                 <div class="custom-file mt-3 mb-3">
-                  <input id="fileInput" type="file" style="display:none;" />
-                  <input
-                    type="button"
-                    class="btn btn-primary btn-block mx-auto"
-                    value="CHANGE IMAGE NOW"
-                    onclick="document.getElementById('fileInput').click();"
-                  />
+                  <label
+                      >Description</label
+                    >
+                    {{form.product.product_details|safe}}
                 </div>
               </div>
+
               <div class="col-12">
                 <button type="submit" class="btn btn-primary btn-block text-uppercase">Update Now</button>
               </div>
